--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<meta name="description" content="dev, design, ideas and innovation" />
 	<meta name="keywords" content="gagan jakhotiya gaganjakhotiya reactjs react.js typescript javascript iit indore nucleus software coverfox" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon" />
+	<meta name="theme-color" content="#868462" />
 	<link rel="icon" href="/favicon.ico?" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
